--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script>
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('/sw.js').then(function(registration) {
+            navigator.serviceWorker.register('./sw.js').then(function(registration) {
                 console.log('Service Worker registriert mit Scope:', registration.scope);
                 // Listen for updates to the service worker
                 registration.onupdatefound = function() {
