Praktikum "Camera&Audio"
Praktikum "Camera&Audio"

--- a/index.html
+++ b/index.html
@@ -1,85 +1,128 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <link rel="icon" href="/icon-128x128.png" type="image/png">
-    <meta name="description" content="Eine App, die die verbleibenden Arbeitstage bis zum Ende des Jahres berechnet.">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Eine App, die die verbleibenden Arbeitstage bis zum Ende des Jahres berechnet.">
+    <link rel="icon" href="/icon-128x128.png" type="image/png">
     <link rel="manifest" href="manifest.json">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <title>Arbeitstage bis Ende des Jahres</title>
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const endOfYearDate = new Date('2024-12-31'); // Letzter Tag des Jahres
-            const holidays = [
-                new Date('2024-11-01'), // Beispiel: Feiertag (Allerheiligen)
-            ];
-
-            function calculateWorkingDays(startDate, endDate) {
-                let currentDate = new Date(startDate);
-                let workingDays = 0;
-                while (currentDate <= endDate) {
-                    const day = currentDate.getDay();
-                    const isHoliday = holidays.some(holiday => holiday.getTime() === currentDate.getTime());
-                    
-                    if (day !== 0 && day !== 6 && !isHoliday) { // Montag bis Freitag, ohne Samstag, Sonntag und Feiertage
-                        workingDays++; // Arbeitstag zählen
-                    }
-                    currentDate.setDate(currentDate.getDate() + 1);
-                }
-                return workingDays;
-            }
-
-            const today = new Date();
-            const daysUntilEndOfYear = calculateWorkingDays(today, endOfYearDate);
-
-            document.getElementById('days-to-end-of-year').textContent = daysUntilEndOfYear;
-        });
-    </script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <title>MAS App</title>
 </head>
-<body class="grey lighten-4">
-    <nav>
-        <div class="nav-wrapper teal darken-3">
-            <a href="#" class="brand-logo center">Arbeitstage Zähler</a>
-        </div>
-    </nav>
+<body class="bg-light">
 
+    <!-- Header -->
+    <header class="bg-primary text-white text-center py-3 mb-4">
+        <h1>Übungen MAS Kurs</h1>
+        <p class="lead">Audio/Video</p>
+    </header>
+
+    <!-- Content -->
     <div class="container">
-        <div class="section">
-            <h4 class="center-align">Arbeitstage bis Ende des Jahres</h4>
-            <div class="card">
-                <div class="card-content">
-                    <p class="flow-text">Arbeitstage bis zum Ende des Jahres (31. Dezember): <span id="days-to-end-of-year" class="teal-text text-darken-3"></span></p>
+        <div class="row gy-4">
+            <!-- Video Section -->
+            <div class="col-md-6">
+                <div class="card shadow-sm">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Video aufnehmen</h5>
+                        <p class="card-text">Klicken Sie unten, um Video aufzunehmen:</p>
+                        <button class="btn btn-primary" onclick="getStream('video')">Video aufnehmen</button>
+                        <div class="mt-3">
+                            <video class="border rounded" controls autoplay style="height:180px; width: 100%;"></video>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Audio Section -->
+            <div class="col-md-6">
+                <div class="card shadow-sm">
+                    <div class="card-body text-center">
+                        <h5 class="card-title">Audio aufnehmen</h5>
+                        <p class="card-text">Klicken Sie unten, um Audio aufzunehmen:</p>
+                        <button class="btn btn-primary" onclick="getStream('audio')">Audio aufnehmen</button>
+                        <div class="mt-3">
+                            <audio class="border rounded w-100" controls></audio>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <!-- Footer -->
+    <footer class="bg-dark text-white text-center py-3 mt-4">
+        <p>&copy; 2024 Marcus Zinn - MAS App. Alle Rechte vorbehalten.</p>
+    </footer>
+
     <script>
+        function getUserMedia(constraints) {
+            if (navigator.mediaDevices) {
+                return navigator.mediaDevices.getUserMedia(constraints);
+            }
+
+            const legacyApi = navigator.getUserMedia || navigator.webkitGetUserMedia ||
+                navigator.mozGetUserMedia || navigator.msGetUserMedia;
+
+            if (legacyApi) {
+                return new Promise(function (resolve, reject) {
+                    legacyApi.bind(navigator)(constraints, resolve, reject);
+                });
+            }
+        }
+
+        function getStream(type) {
+            if (!navigator.mediaDevices && !navigator.getUserMedia &&
+                !navigator.webkitGetUserMedia && !navigator.mozGetUserMedia &&
+                !navigator.msGetUserMedia) {
+                alert('User Media API wird nicht unterstützt.');
+                return;
+            }
+
+            const constraints = {};
+            constraints[type] = true;
+
+            getUserMedia(constraints)
+                .then(function (stream) {
+                    const mediaControl = document.querySelector(type);
+
+                    if ('srcObject' in mediaControl) {
+                        mediaControl.srcObject = stream;
+                    } else if (navigator.mozGetUserMedia) {
+                        mediaControl.mozSrcObject = stream;
+                    } else {
+                        mediaControl.src = (window.URL || window.webkitURL).createObjectURL(stream);
+                    }
+
+                    mediaControl.play();
+                })
+                .catch(function (err) {
+                    alert('Fehler: ' + err);
+                });
+        }
+
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('./sw.js').then(function(registration) {
-                console.log('Service Worker registriert mit Scope:', registration.scope);
-                // Listen for updates to the service worker
-                registration.onupdatefound = function() {
-                    const installingWorker = registration.installing;
-                    installingWorker.onstatechange = function() {
-                        if (installingWorker.state === 'installed') {
-                            if (navigator.serviceWorker.controller) {
-                                // New update available
-                                console.log('Neue Version verfügbar. Bitte die Seite aktualisieren.');
-                                M.toast({html: 'Neue Version verfügbar! Bitte aktualisieren Sie die Seite.', classes: 'teal darken-3'});
-                            } else {
-                                // Content is cached for offline use
-                                console.log('Inhalte wurden gecached, um offline genutzt zu werden.');
+            navigator.serviceWorker.register('./sw.js')
+                .then(function (registration) {
+                    console.log('Service Worker registriert:', registration.scope);
+                    registration.onupdatefound = function () {
+                        const installingWorker = registration.installing;
+                        installingWorker.onstatechange = function () {
+                            if (installingWorker.state === 'installed') {
+                                if (navigator.serviceWorker.controller) {
+                                    console.log('Neue Version verfügbar. Bitte aktualisieren.');
+                                    alert('Neue Version verfügbar! Aktualisieren Sie die Seite.');
+                                } else {
+                                    console.log('Inhalte offline verfügbar.');
+                                }
                             }
-                        }
+                        };
                     };
-                };
-            }).catch(function(error) {
-                console.error('Service Worker Registrierung fehlgeschlagen:', error);
-            });
+                })
+                .catch(function (error) {
+                    console.error('Service Worker Fehler:', error);
+                });
         }
     </script>
 </body>
